# sfml-engine

./: CMakeLists.txt  README.md
include/engine/: Easing.hpp  GameInstance.hpp  InteractionSource.hpp  Scene.hpp
src/: Easing.cpp  GameInstance.cpp  InteractionSource.cpp
